--- a/LicenseService/src/main/resources/application.properties
+++ b/LicenseService/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+
+#Spring Actuator configuration http://localhost:8080/health
+management.endpoints.web.base-path=/
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.health.db.enabled=false
+management.health.diskspace.enabled=false
