Adding cloud starter config dependency
Adding this props to application.properties:

#Default profile the service should run
spring.profiles.active=default

spring.cloud.config.enabled=true
spring.config.import=optional:configserver:http://localhost:8071

--- a/LicenseService/src/main/resources/application.properties
+++ b/LicenseService/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+#Name of application must map directly to the name of the config directory in Spring Cloud Config
+spring.application.name=licensing-service
 
+#Default profile the service should run
+spring.profiles.active=default
+
+#Location of the Spring Cloud Config Server
+spring.cloud.config.uri=http://localhost:8071
+
+spring.cloud.config.enabled=true
+spring.config.import=optional:configserver:http://localhost:8071
 
 #Spring Actuator configuration http://localhost:8080/health
 management.endpoints.web.base-path=/
