Adding mysql properties dev profile
:::::Before License Model JPA

--- a/LicenseService/src/main/resources/application.properties
+++ b/LicenseService/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=licensing-service
 
 #Default profile the service should run
-spring.profiles.active=default
+spring.profiles.active=dev
 
 #Location of the Spring Cloud Config Server
 spring.cloud.config.uri=http://localhost:8071
